--- a/theme-planty/style.css
+++ b/theme-planty/style.css
@@ -17,9 +17,11 @@ Tags: Planty, boisson, plantes
    font-family: 'Syne', sans-serif;
    margin: 0;
    padding:0;
-   text-align: center;
+   text-align: center;   
+}
 
-   
+body{
+   margin: 0 5rem 0 5rem;
 }
 
 /* Les constantes */
