--- a/theme-planty/style.css
+++ b/theme-planty/style.css
@@ -81,9 +81,19 @@ a{
    padding:2rem 3rem;
    font-weight: bold;
    font-size: large;
+   color:var(--white);
 }
 
-.button:hover{
+.button-form {	
+   background-color: var(--orange-light);   
+   padding:1rem 2rem;
+   font-size:medium;
+   color:var(--white);
+   border: none;
+   border-radius: 6px;
+}
+
+.button:hover, .button-form:hover{
    background-color: var(--red);   
 }
 
@@ -177,12 +187,38 @@ a{
 /*Formulaire commande */
 .form-commande{
    display: flex;
-   flex-direction: row;
-   column-gap: 1rem;
+   flex-direction: row;  
+   justify-content: center;
+   width: 100%;  
 }
 
+input[type="text"],
+input[type="email"] {
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 6px;
+  padding: 2rem;
+  margin: 1rem;
+ /* flex-grow: 2;*/
+  background: var(--white);
+  resize: none;
+  outline: none;
+}
+
+label{
+   color:var(--white);
+   font-size:x-large;
+  
+}
+
+/*fond d'écran de la page commande*/
 .page-id-43{
    background-color:var(--green);
 }
 
+.title-form
+{
+   color:var(--white);
+   font-size: xx-large;
+}
 
