--- a/theme-planty/style.css
+++ b/theme-planty/style.css
@@ -250,6 +250,11 @@ a{
    font-size: 4rem;
    font-weight: 900;
 }
+@media screen and (max-width: 1024px) {
+   .spectra-image-gallery__media-thumbnail-caption--overlay{              
+     font-size:2rem;
+   }   
+}
 
 /*Formulaire contact*/
 .form-contact{
@@ -264,7 +269,7 @@ a{
    flex-direction: row;  
    justify-content: center;       
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
    .form-infos{              
       flex-direction: column; 
       margin:1rem;
@@ -272,7 +277,9 @@ a{
 }
 
 .input-form {
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
+  box-sizing: content-box;
+  width:100%;
   border: 0;
   border-radius: 6px;
   margin: 1rem 0 1rem 0;
@@ -349,16 +356,18 @@ label{
    height:60px;
 }
 @media screen and (max-width: 960px) {
+   .input-number{
+      width:3rem;
+   }
    .button-ok{              
       width: 4rem;}
+
    }  
 
 /*le bouton change de couleur au suvol*/
 .button:hover, .button-form:hover, .button-ok:hover {
    background-color: var(--red);   
 }
-
-
 
 /*fond d'écran de la page commande*/
 .page-id-43{
@@ -397,7 +406,6 @@ label{
 }
    }   
 
-
 .separ{
    color: var(--white);
    width:50%;   
@@ -408,13 +416,13 @@ label{
 }
 
 
-
 /*affichage de la gaellerie de la page commande*/
 .wrap{
    width:50%;
-   min-width:50rem;
+   min-width:60rem;
 }@media screen and (max-width: 960px) {
    .wrap{              
       width:100%;
       min-width:0;}
    }   
+
